--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
         "prepack": "npm run build",
         "test": "mocha --ui bdd --recursive ./dist/test --timeout 90000 --unhandled-rejections=strict ",
         "test:e2e": "npm run build && mocha --ui bdd --recursive ./dist/e2e --timeout 90000 --unhandled-rejections=strict",
-        "e2e": "npm run bootstrap-stop && npm run bootstrap-start-detached && npm run test:e2e && npm run bootstrap-stop",
         "test:all": "mocha --ui bdd --recursive ./dist/ --timeout 90000 --unhandled-rejections=strict",
         "build": "shx rm -rf dist/ && tsc",
         "watch": "tsc --watch",
@@ -20,15 +19,7 @@
         "lint:fix": "eslint src/ test/ e2e/ --ext .ts --fix",
         "style:fix": "npm run create-index-files && npm run prettier && npm run lint:fix",
         "create-index-files": "cti create ./src -b -n",
-        "doc": "typedoc --out \"ts-docs/$(npm run version --silent)\" src",
-        "bootstrap-clean": "symbol-bootstrap clean -t target/bootstrap-test",
-        "bootstrap-start-detached": "symbol-bootstrap start -r -c ./e2e/e2e-preset.yml -t target/bootstrap-test --timeout 120000 -d --healthCheck",
-        "bootstrap-start": "symbol-bootstrap start -r -c ./e2e/e2e-preset.yml --timeout 120000 -t target/bootstrap-test",
-        "bootstrap-upgrade": "symbol-bootstrap compose -r -t target/bootstrap-test",
-        "bootstrap-stop": "symbol-bootstrap stop -t target/bootstrap-test",
-        "bootstrap-run": "symbol-bootstrap run -t target/bootstrap-test",
-        "bootstrap-compose": "symbol-bootstrap compose -t target/bootstrap-test",
-        "bootstrap-config": "symbol-bootstrap config -p bootstrap -c ./e2e/e2e-preset.yml -t target/bootstrap-test"
+        "doc": "typedoc --out \"ts-docs/$(npm run version --silent)\" src"
     },
     "pre-commit": [
         "lint"
@@ -88,7 +79,6 @@
         "prettier-plugin-organize-imports": "^1.1.1",
         "secure-random": "^1.1.2",
         "shx": "^0.3.2",
-        "symbol-bootstrap": "^1.0.9",
         "ts-mockito": "^2.6.1",
         "ts-node": "^8.10.2",
         "typedoc": "^0.22.10",
