--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     },
     "dependencies": {
         "@js-joda/core": "^3.2.0",
-        "catbuffer-typescript": "^1.0.1",
+        "catbuffer-typescript": "git://github.com/Vladimir7280/catbuffer-typescript.git",
         "crypto-js": "^4.0.0",
         "futoin-hkdf": "^1.3.2",
         "js-sha256": "^0.9.0",
