--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "dependencies": {
         "@js-joda/core": "^3.2.0",
         "catbuffer-typescript": "git+https://github.com/Vladimir7280/catbuffer-typescript.git",
+        "symbol-openapi-typescript-fetch-client": "git+https://github.com/Vladimir7280/symbol-openapi-typescript-fetch-client.git",
         "crypto-js": "^4.0.0",
         "futoin-hkdf": "^1.3.2",
         "js-sha256": "^0.9.0",
