--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "symbol-sdk-twix",
-    "version": "2.0.4",
+    "name": "twix-sdk",
+    "version": "2.0.3",
     "description": "Reactive symbol sdk for typescript and javascript",
     "scripts": {
         "pretest": "npm run build",
@@ -76,8 +76,8 @@
     },
     "dependencies": {
         "@js-joda/core": "^3.2.0",
-        "catbuffer-typescript": "git+https://github.com/Vladimir7280/catbuffer-typescript.git",
-        "symbol-openapi-typescript-fetch-client": "git+https://github.com/Vladimir7280/symbol-openapi-typescript-fetch-client.git",
+        "twix-catbuffer-typescript": "^1.0.2",
+        "twix-openapi-typescript-fetch-client": "^1.0.2",
         "crypto-js": "^4.0.0",
         "futoin-hkdf": "^1.3.2",
         "js-sha256": "^0.9.0",
